--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="col s4">
           <form id="photo-form">
             <label for="image_url">Image Url</label>
-            <input type='text' name='image_url' />
+            <input type='text' name='image_url' id="image-url" />
             <label for="caption">Caption</label>
-            <input type='text' name='caption' />
+            <input type='text' name='caption' id="caption" />
             <input type='submit' />
           </form>
         </div>
@@ -32,5 +32,7 @@
 
     </div>
     <script type="text/javascript" src='src/index.js'></script>
+    <script type="text/javascript" src='src/views/PhotoList.js'></script>
+    <script type="text/javascript" src='src/models/Photo.js'></script>
   </body>
 </html>
